--- a/adm/src/main/resources/application.properties
+++ b/adm/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=password1!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
+
+jwt.secret=mySecretKey
+jwt.expiration=86400
